--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="50">
+            Fit Kids
+        </h1>
+        <nav>
+        <a href="#Historia">Quiénes somos</a>
+        <a href="#MisionVision">Misión y Visión</a>
+        <a href="#Informes">Informes</a>
+        <a href="registro.html">Regístrate</a>
+        <a href="inicioSesion.html">Iniciar Sesión</a>
+        </nav>
+    </header>
 </body>
 </html>
