Cuarto Commit: Encabezado y primera sección en html y css

--- a/html/index.html
+++ b/html/index.html
@@ -3,21 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fit Kids</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>
-            <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="50">
-            Fit Kids
-        </h1>
-        <nav>
-        <a href="#Historia">Quiénes somos</a>
-        <a href="#MisionVision">Misión y Visión</a>
-        <a href="#Informes">Informes</a>
-        <a href="registro.html">Regístrate</a>
-        <a href="inicioSesion.html">Iniciar Sesión</a>
+    <header class="encabezado">
+        <div class="contenedor">
+            <div class="logo-titulo">
+                <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="60">
+                <h1>Fit Kids</h1>
+            </div>
+
+        <nav class="menu">
+            <a href="#QuienesSomos">Quiénes somos</a>
+            <a href="#QueBuscamos">Qué Buscamos</a>
+            <a href="#Informes">Informes</a>
+            <a href="registro.html">Regístrate</a>
+            <a href="inicioSesion.html">Iniciar Sesión</a>
         </nav>
+        </div>
     </header>
+    <section id="QuienesSomos">
+        <div class="contenedor">
+            <div class="texto">
+                <h2>¿Quiénes Somos?</h2>
+                <p>
+                ¡Hola, somos FITKIDS Aqp! 👧🏻👦🏻💪🏻 
+                <br>
+                Un centro de entrenamiento predeportivo y funcional especializado en la formación corporal de niños y jóvenes,
+                a través de ejercicios funcionales, rutinas dinámicas y actividades lúdicas al aire libre 🌳🤸🏻. 
+                <br>
+                💥 Nuestro objetivo es potenciar su desarrollo físico y emocional, ayudándolos a ser más activos, fuertes y seguros de sí mismos.
+                </p>
+            </div>
+            <div class="imagen">
+                <img src="../img/FitKids_juntos.jpg" alt="QuienesSomos" width="400">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
+
+
+        
