Quinto Commit: Arreglo del Encabezado (HTML y CSS)

--- a/html/index.html
+++ b/html/index.html
@@ -10,16 +10,16 @@
     <header class="encabezado">
         <div class="contenedor">
             <div class="logo-titulo">
-                <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="60">
-                <h1>Fit Kids</h1>
+                <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="60" class="logo">
+                <h1 class="titulo">FitKids</h1>
             </div>
 
         <nav class="menu">
-            <a href="#QuienesSomos">Quiénes somos</a>
-            <a href="#QueBuscamos">Qué Buscamos</a>
-            <a href="#Informes">Informes</a>
-            <a href="registro.html">Regístrate</a>
-            <a href="inicioSesion.html">Iniciar Sesión</a>
+            <a href="#QuienesSomos">QUIÉNES SOMOS</a>
+            <a href="#QueBuscamos">QUÉ BUSCAMOS</a>
+            <a href="#Informes">INFORMES</a>
+            <a href="registro.html">REGÍSTRATE</a>
+            <a href="inicioSesion.html">INICIAR SESIÓN</a>
         </nav>
         </div>
     </header>
