Sexto Commit: Background y aumento de información (HTML Y CSS)

--- a/html/index.html
+++ b/html/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fit Kids</title>
+    <title>FitKids</title>
+    <link rel="icon" href="../img/logo_fit_kids.png" type="image/png">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header class="encabezado">
         <div class="contenedor">
             <div class="logo-titulo">
+                <a href="index.html">
                 <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="60" class="logo">
+                </a>
                 <h1 class="titulo">FitKids</h1>
             </div>
 
@@ -38,6 +41,23 @@
             </div>
             <div class="imagen">
                 <img src="../img/FitKids_juntos.jpg" alt="QuienesSomos" width="400">
+            </div>
+        </div>
+    </section>
+    <section id="QueBuscamos">
+        <div class="contenedor">
+            <div class="imagen">
+                <img src="../img/estacion.png" alt="QueBuscamos" width="400">
+            </div>
+            <div class="texto">
+                <h2>¿Qué Buscamos?</h2>
+                <p>
+                    ✅ Mejorar la coordinación motriz <br>
+                    ✅ Tonificar los músculos <br>
+                    ✅ Desarrollar fuerza, resistencia, velocidad y flexibilidad <br>
+                    ✅ Reforzar su imagen corporal y salud emocional <br>
+                    ✅ Evitar el sedentarismo y el sobrepeso
+                </p>
             </div>
         </div>
     </section>
