Séptimo Commit: Aumento de información, modificación menú (HTML y CSS)

--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,9 @@
             <a href="#QuienesSomos">QUIÉNES SOMOS</a>
             <a href="#QueBuscamos">QUÉ BUSCAMOS</a>
             <a href="#Informes">INFORMES</a>
+            <a href="#Videos">VIDEOS</a>
             <a href="registro.html">REGÍSTRATE</a>
-            <a href="inicioSesion.html">INICIAR SESIÓN</a>
+            <a href="sesion.html">INICIAR SESIÓN</a>
         </nav>
         </div>
     </header>
@@ -61,8 +62,29 @@
             </div>
         </div>
     </section>
+    <section id="Informes">
+        <div class="contenedor">
+            <div class="texto">
+                <h2>Informes</h2>
+                <p>
+                    🎲 ¡Además, trabajamos con juegos súper divertidos que fortalecen su agilidad mientras se divierten al máximo! <br>
+                    📅 Clases para niños y niñas desde los 6 años <br>
+                    ⚠️ CUPOS LIMITADOS: ¡Reserva tu lugar cuanto antes!
+                </p>
+            </div>
+            <div class="imagen">
+                <img src="../img/paracaidas_fitkids.png" alt="Informes_img" width="400">
+            </div>
+        </div>
+    </section>
+    <section id="Videos">
+        <iframe width="560" height="315"
+            src="https://www.youtube.com/watch?v=b4shLyXUSPc"
+            title="Video de ejemplo"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+</iframe>
+    </section>
 </body>
 </html>
-
-
-        
