Octavo Commit: Aumento de archivos, mejor estructuración, efectos en Quiénes somos (HTML y CSS)

--- a/html/sesion.html
+++ b/html/sesion.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    
+    <header class="encabezado">
+        <div class="contenedor">
+            <div class="logo-titulo">
+                <a href="index.html">
+                <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="60" class="logo">
+                </a>
+                <h1 class="titulo">FitKids</h1>
+            </div>
+
+        <nav class="menu">
+            <a href="quienesSomos.html">QUIÉNES SOMOS</a>
+            <a href="registro.html">REGÍSTRATE</a>
+            <a href="sesion.html">INICIAR SESIÓN</a>
+        </nav>
+        </div>
+    </header>
 </body>
 </html>
