--- a/html/index.html
+++ b/html/index.html
@@ -18,73 +18,11 @@
             </div>
 
         <nav class="menu">
-            <a href="#QuienesSomos">QUIÉNES SOMOS</a>
-            <a href="#QueBuscamos">QUÉ BUSCAMOS</a>
-            <a href="#Informes">INFORMES</a>
-            <a href="#Videos">VIDEOS</a>
+            <a href="quienesSomos.html">QUIÉNES SOMOS</a>
             <a href="registro.html">REGÍSTRATE</a>
             <a href="sesion.html">INICIAR SESIÓN</a>
         </nav>
         </div>
     </header>
-    <section id="QuienesSomos">
-        <div class="contenedor">
-            <div class="texto">
-                <h2>¿Quiénes Somos?</h2>
-                <p>
-                ¡Hola, somos FITKIDS Aqp! 👧🏻👦🏻💪🏻 
-                <br>
-                Un centro de entrenamiento predeportivo y funcional especializado en la formación corporal de niños y jóvenes,
-                a través de ejercicios funcionales, rutinas dinámicas y actividades lúdicas al aire libre 🌳🤸🏻. 
-                <br>
-                💥 Nuestro objetivo es potenciar su desarrollo físico y emocional, ayudándolos a ser más activos, fuertes y seguros de sí mismos.
-                </p>
-            </div>
-            <div class="imagen">
-                <img src="../img/FitKids_juntos.jpg" alt="QuienesSomos" width="400">
-            </div>
-        </div>
-    </section>
-    <section id="QueBuscamos">
-        <div class="contenedor">
-            <div class="imagen">
-                <img src="../img/estacion.png" alt="QueBuscamos" width="400">
-            </div>
-            <div class="texto">
-                <h2>¿Qué Buscamos?</h2>
-                <p>
-                    ✅ Mejorar la coordinación motriz <br>
-                    ✅ Tonificar los músculos <br>
-                    ✅ Desarrollar fuerza, resistencia, velocidad y flexibilidad <br>
-                    ✅ Reforzar su imagen corporal y salud emocional <br>
-                    ✅ Evitar el sedentarismo y el sobrepeso
-                </p>
-            </div>
-        </div>
-    </section>
-    <section id="Informes">
-        <div class="contenedor">
-            <div class="texto">
-                <h2>Informes</h2>
-                <p>
-                    🎲 ¡Además, trabajamos con juegos súper divertidos que fortalecen su agilidad mientras se divierten al máximo! <br>
-                    📅 Clases para niños y niñas desde los 6 años <br>
-                    ⚠️ CUPOS LIMITADOS: ¡Reserva tu lugar cuanto antes!
-                </p>
-            </div>
-            <div class="imagen">
-                <img src="../img/paracaidas_fitkids.png" alt="Informes_img" width="400">
-            </div>
-        </div>
-    </section>
-    <section id="Videos">
-        <iframe width="560" height="315"
-            src="https://www.youtube.com/watch?v=b4shLyXUSPc"
-            title="Video de ejemplo"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-</iframe>
-    </section>
 </body>
 </html>
