Noveno commit: Avance css y html

--- a/html/index.html
+++ b/html/index.html
@@ -1,28 +1,65 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FitKids</title>
-    <link rel="icon" href="../img/logo_fit_kids.png" type="image/png">
-    <link rel="stylesheet" href="../css/styles.css">
+  <meta charset="UTF-8">
+  <title>FitKids</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../img/logo_fit_kids.png">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
-    <header class="encabezado">
-        <div class="contenedor">
-            <div class="logo-titulo">
-                <a href="index.html">
-                <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="60" class="logo">
-                </a>
-                <h1 class="titulo">FitKids</h1>
-            </div>
 
-        <nav class="menu">
-            <a href="quienesSomos.html">QUIÉNES SOMOS</a>
-            <a href="registro.html">REGÍSTRATE</a>
-            <a href="sesion.html">INICIAR SESIÓN</a>
-        </nav>
+<body>
+
+<header class="encabezado">
+  <div class="contenedor">
+    <div class="logo-titulo">
+      <img src="../img/logo_fit_kids.png" class="logo" alt="FitKids">
+      <h1 class="titulo">FitKids</h1>
+    </div>
+
+    <nav class="menu">
+      <a href="quienesSomos.html">Quiénes somos</a>
+      <a href="nuestraTienda.html">Tienda</a>
+      <a href="registro.html">Regístrate</a>
+      <a href="sesion.html">Iniciar sesión</a>
+    </nav>
+  </div>
+</header>
+
+<section class="hero">
+  <div class="hero-contenido">
+    <h2>Movimiento, juego y salud para niños</h2>
+    <p>
+      Entrenamiento pre operacional que desarrolla coordinación,
+      fuerza y confianza a través del juego.
+    </p>
+    <a href="registro.html" class="btn-principal">Inscríbete ahora</a>
+  </div>
+</section>
+
+<section class="beneficios">
+    <div class="contenedor">
+        <h3>¿Qué logramos con FitKids?</h3>
+        <div class="grid">
+            <div class="card">
+            <h4>Coordinación</h4>
+            <p>Desarrollo motriz mediante juegos y circuitos dinámicos.</p>
+            </div>
+            <div class="card">
+            <h4>Fuerza y Resistencia</h4>
+            <p>Entrenamiento funcional adaptado a cada edad.</p>
+            </div>
+            <div class="card">
+            <h4>Confianza</h4>
+            <p>Niños seguros, activos y con hábitos saludables.</p>
+            </div>
         </div>
-    </header>
+    </div>
+</section>
+
+<footer>
+  © 2025 FitKids · Bienestar físico infantil
+</footer>
+
 </body>
 </html>
