--- a/html/quienesSomos.html
+++ b/html/quienesSomos.html
@@ -1,79 +1,105 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FitKids</title>
-    <link rel="icon" href="../img/logo_fit_kids.png" type="image/png">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/quienesSomos.css">
+  <meta charset="UTF-8">
+  <title>Quiénes Somos | FitKids</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../img/logo_fit_kids.png">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
-    <header class="encabezado">
-        <div class="contenedor">
-            <div class="logo-titulo">
-                <a href="index.html">
-                <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="60" class="logo">
-                </a>
-                <h1 class="titulo">FitKids</h1>
-            </div>
 
-        <nav class="menu">
-            <a href="quienesSomos.html">QUIÉNES SOMOS</a>
-            <a href="registro.html">REGÍSTRATE</a>
-            <a href="sesion.html">INICIAR SESIÓN</a>
-        </nav>
-        </div>
-    </header>
-    <section id="QuienesSomos">
-        <div class="contenedor">
-            <div class="texto">
-                <h2>¿Quiénes Somos?</h2>
-                <p>
-                ¡Hola, somos FITKIDS Aqp! 👧🏻👦🏻💪🏻 
-                <br>
-                Un centro de entrenamiento predeportivo y funcional especializado en la formación corporal de niños y jóvenes,
-                a través de ejercicios funcionales, rutinas dinámicas y actividades lúdicas al aire libre 🌳🤸🏻. 
-                <br>
-                💥 Nuestro objetivo es potenciar su desarrollo físico y emocional, ayudándolos a ser más activos, fuertes y seguros de sí mismos.
-                </p>
-            </div>
-            <div class="imagen">
-                <img src="../img/FitKids_juntos.jpg" alt="QuienesSomos" width="400">
-            </div>
-        </div>
-    </section>
-    <section id="QueBuscamos">
-        <div class="contenedor">
-            <div class="imagen">
-                <img src="../img/estacion.png" alt="QueBuscamos" width="400">
-            </div>
-            <div class="texto">
-                <h2>¿Qué Buscamos?</h2>
-                <p>
-                    ✅ Mejorar la coordinación motriz <br>
-                    ✅ Tonificar los músculos <br>
-                    ✅ Desarrollar fuerza, resistencia, velocidad y flexibilidad <br>
-                    ✅ Reforzar su imagen corporal y salud emocional <br>
-                    ✅ Evitar el sedentarismo y el sobrepeso
-                </p>
-            </div>
-        </div>
-    </section>
-    <section id="Informes">
-        <div class="contenedor">
-            <div class="texto">
-                <h2>Informes</h2>
-                <p>
-                    🎲 ¡Además, trabajamos con juegos súper divertidos que fortalecen su agilidad mientras se divierten al máximo! <br>
-                    📅 Clases para niños y niñas desde los 6 años <br>
-                    ⚠️ CUPOS LIMITADOS: ¡Reserva tu lugar cuanto antes!
-                </p>
-            </div>
-            <div class="imagen">
-                <img src="../img/paracaidas_fitkids.png" alt="Informes_img" width="400">
-            </div>
-        </div>
-    </section>
+<body>
+
+<!-- ================= HEADER ================= -->
+<header class="encabezado">
+  <div class="contenedor">
+    <div class="logo-titulo">
+      <a href="index.html">
+        <img src="../img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
+      </a>
+      <h1 class="titulo">FitKids</h1>
+    </div>
+
+    <nav class="menu">
+      <a href="quienesSomos.html" class="activo">Quiénes somos</a>
+      <a href="nuestraTienda.html">Tienda</a>
+      <a href="registro.html">Regístrate</a>
+      <a href="sesion.html">Iniciar sesión</a>
+    </nav>
+  </div>
+</header>
+
+<!-- ================= QUIÉNES SOMOS ================= -->
+<section class="seccion">
+  <div class="contenedor seccion-flex">
+    
+    <div class="texto">
+      <h2>¿Quiénes somos?</h2>
+
+      <p>
+        FitKids es un emprendimiento enfocado en el bienestar físico infantil,
+        diseñado especialmente para niños y jóvenes en etapa de desarrollo.
+      </p>
+
+      <p>
+        Nuestro enfoque se basa en el entrenamiento pre operacional, donde el
+        movimiento, el juego y la exploración corporal son las principales
+        herramientas de aprendizaje.
+      </p>
+    </div>
+
+    <img src="../img/FitKids_juntos.jpg" alt="Niños entrenando en FitKids">
+
+  </div>
+</section>
+
+<!-- ================= NUESTRO ENFOQUE ================= -->
+<section class="seccion">
+  <div class="contenedor seccion-flex">
+
+    <img src="../img/estacion.png" alt="Entrenamiento funcional infantil">
+
+    <div class="texto">
+      <h2>Nuestro enfoque</h2>
+
+      <p>
+        En FitKids no trabajamos con rutinas de gimnasio tradicionales.
+        Diseñamos actividades lúdicas que fortalecen la coordinación,
+        el equilibrio y la resistencia de manera progresiva y segura.
+      </p>
+
+      <p>
+        Cada sesión está adaptada a la edad y capacidades de los niños,
+        promoviendo hábitos saludables desde temprana edad.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<!-- ================= POR QUÉ FITKIDS ================= -->
+<section class="seccion">
+  <div class="contenedor seccion-flex">
+
+    <div class="texto">
+      <h2>¿Por qué FitKids?</h2>
+
+      <p>
+        Creemos que un niño activo es un niño más seguro, saludable y feliz.
+        Nuestro objetivo es acompañar su crecimiento físico y emocional
+        en un entorno positivo, controlado y motivador.
+      </p>
+    </div>
+
+    <img src="../img/paracaidas_fitkids.png" alt="Juego y desarrollo infantil">
+
+  </div>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+  © 2025 FitKids · Bienestar físico infantil
+</footer>
+
 </body>
 </html>
