--- a/html/registro.html
+++ b/html/registro.html
@@ -1,28 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitkids</title>
-    <link rel="icon" href="../img/logo_fit_kids.png" type="image/png">
-    <link rel="stylesheet" href="../css/styles.css">
+  <meta charset="UTF-8">
+  <title>Registro | FitKids</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../img/logo_fit_kids.png">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
-    <header class="encabezado">
-        <div class="contenedor">
-            <div class="logo-titulo">
-                <a href="index.html">
-                <img src="../img/logo_fit_kids.png" alt="Logo FitKids" width="60" class="logo">
-                </a>
-                <h1 class="titulo">FitKids</h1>
-            </div>
 
-        <nav class="menu">
-            <a href="quienesSomos.html">QUIÉNES SOMOS</a>
-            <a href="registro.html">REGÍSTRATE</a>
-            <a href="sesion.html">INICIAR SESIÓN</a>
-        </nav>
-        </div>
-    </header>
+<body>
+
+<header class="encabezado">
+  <div class="contenedor">
+    <div class="logo-titulo">
+      <img src="../img/logo_fit_kids.png" class="logo" alt="FitKids">
+      <h1 class="titulo">FitKids</h1>
+    </div>
+
+    <nav class="menu">
+      <a href="quienesSomos.html">Quiénes somos</a>
+      <a href="nuestraTienda.html">Tienda</a>
+      <a href="registro.html" class="activo">Regístrate</a>
+      <a href="sesion.html">Iniciar sesión</a>
+    </nav>
+  </div>
+</header>
+
+<section class="seccion">
+  <div class="contenedor" style="display:flex; justify-content:center;">
+    <div class="form-card">
+      <h2>Registro</h2>
+      <p>Completa el formulario para inscribir a tu hijo(a).</p>
+
+      <form>
+        <label>Nombre del padre/madre</label>
+        <input type="text" required>
+
+        <label>Nombre del niño(a)</label>
+        <input type="text" required>
+
+        <label>Edad</label>
+        <input type="number" min="4" max="16" required>
+
+        <label>Correo electrónico</label>
+        <input type="email" required>
+
+        <button class="btn-principal" type="submit" style="width:100%; margin-top:15px;">
+          Enviar registro
+        </button>
+      </form>
+    </div>
+  </div>
+</section>
+
+<footer>
+  © 2025 FitKids · Bienestar físico infantil
+</footer>
+
 </body>
 </html>
