--- a/html/quienesSomos.html
+++ b/html/quienesSomos.html
@@ -10,7 +10,6 @@
 
 <body>
 
-<!-- ================= HEADER ================= -->
 <header class="encabezado">
   <div class="contenedor">
     <div class="logo-titulo">
@@ -23,13 +22,13 @@
     <nav class="menu">
       <a href="quienesSomos.html" class="activo">Quiénes somos</a>
       <a href="nuestraTienda.html">Tienda</a>
+      <a href="nuestrasSedes.html">Nuestras Sedes</a>
       <a href="registro.html">Regístrate</a>
       <a href="sesion.html">Iniciar sesión</a>
     </nav>
   </div>
 </header>
 
-<!-- ================= QUIÉNES SOMOS ================= -->
 <section class="seccion">
   <div class="contenedor seccion-flex">
     
@@ -53,7 +52,6 @@
   </div>
 </section>
 
-<!-- ================= NUESTRO ENFOQUE ================= -->
 <section class="seccion">
   <div class="contenedor seccion-flex">
 
@@ -77,7 +75,6 @@
   </div>
 </section>
 
-<!-- ================= POR QUÉ FITKIDS ================= -->
 <section class="seccion">
   <div class="contenedor seccion-flex">
 
@@ -96,9 +93,42 @@
   </div>
 </section>
 
-<!-- ================= FOOTER ================= -->
-<footer>
-  © 2025 FitKids · Bienestar físico infantil
+<footer class="footer">
+  <div class="contenedor footer-grid">
+
+    <div class="footer-col">
+      <h3 class="footer-logo">FitKids</h3>
+      <p>
+        Bienestar físico infantil a través del movimiento,
+        el juego y el entrenamiento pre-operacional.
+      </p>
+    </div>
+
+    <div class="footer-col">
+      <h4>Enlaces</h4>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="quienesSomos.html">Quiénes somos</a></li>
+        <li><a href="nuestraTienda.html">Tienda</a></li>
+        <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
+        <li><a href="registro.html">Regístrate</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Contacto</h4>
+      <ul>
+        <li>📍 Arequipa, Perú</li>
+        <li>📞 +51 953 721 561</li>
+        <li>✉️ contacto@fitkids.pe</li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    © 2025 FitKids · Bienestar físico infantil
+  </div>
 </footer>
 
 </body>
