--- a/html/sesion.html
+++ b/html/sesion.html
@@ -22,6 +22,7 @@
     <nav class="menu">
       <a href="quienesSomos.html">Quiénes somos</a>
       <a href="tienda.html">Tienda</a>
+      <a href="nuestrasSedes.html">Nuestras Sedes</a>
       <a href="registro.html">Regístrate</a>
       <a href="sesion.html" class="activo">Iniciar sesión</a>
     </nav>
@@ -31,7 +32,6 @@
 <section class="auth">
   <div class="contenedor auth-layout">
 
-    <!-- Banner (derecha/arriba en móvil) -->
     <aside class="auth-banner">
       <div>
         <h3>Bienvenido(a) a FitKids</h3>
@@ -39,7 +39,6 @@
       </div>
     </aside>
 
-    <!-- Tarjeta Login -->
     <main class="auth-panel">
       <div class="cabecera">
         <h2>Iniciar sesión</h2>
@@ -69,8 +68,41 @@
   </div>
 </section>
 
-<footer>
-  © 2025 FitKids · Bienestar físico infantil
+<footer class="footer">
+  <div class="contenedor footer-grid">
+
+    <div class="footer-col">
+      <h3 class="footer-logo">FitKids</h3>
+      <p>
+        Bienestar físico infantil a través del movimiento,
+        el juego y el entrenamiento pre-operacional.
+      </p>
+    </div>
+
+    <div class="footer-col">
+      <h4>Enlaces</h4>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="quienesSomos.html">Quiénes somos</a></li>
+        <li><a href="nuestraTienda.html">Tienda</a></li>
+        <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
+        <li><a href="registro.html">Regístrate</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Contacto</h4>
+      <ul>
+        <li>📍 Arequipa, Perú</li>
+        <li>📞 +51 953 721 561</li>
+        <li>✉️ contacto@fitkids.pe</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    © 2025 FitKids · Bienestar físico infantil
+  </div>
 </footer>
 
 </body>
