--- a/html/registro.html
+++ b/html/registro.html
@@ -13,13 +13,16 @@
 <header class="encabezado">
   <div class="contenedor">
     <div class="logo-titulo">
-      <img src="../img/logo_fit_kids.png" class="logo" alt="FitKids">
+      <a href="index.html">
+        <img src="../img/logo_fit_kids.png" alt="Logo FitKids" class="logo">
+      </a>
       <h1 class="titulo">FitKids</h1>
     </div>
 
     <nav class="menu">
       <a href="quienesSomos.html">Quiénes somos</a>
       <a href="nuestraTienda.html">Tienda</a>
+      <a href="nuestrasSedes.html">Nuestras Sedes</a>
       <a href="registro.html" class="activo">Regístrate</a>
       <a href="sesion.html">Iniciar sesión</a>
     </nav>
@@ -40,10 +43,19 @@
         <input type="text" required>
 
         <label>Edad</label>
-        <input type="number" min="4" max="16" required>
+        <input type="number" min="4" max="12" required>
+
+        <label>Sede</label>
+        <select name="sede">
+          <option value="paucarpata">Paucarpata</option>
+          <option value="recoleta">Recoleta</option>
+        </select>
 
         <label>Correo electrónico</label>
         <input type="email" required>
+
+        <label>Contraseña</label>
+        <input type="password" required>
 
         <button class="btn-principal" type="submit" style="width:100%; margin-top:15px;">
           Enviar registro
@@ -53,8 +65,42 @@
   </div>
 </section>
 
-<footer>
-  © 2025 FitKids · Bienestar físico infantil
+<footer class="footer">
+  <div class="contenedor footer-grid">
+
+    <div class="footer-col">
+      <h3 class="footer-logo">FitKids</h3>
+      <p>
+        Bienestar físico infantil a través del movimiento,
+        el juego y el entrenamiento pre-operacional.
+      </p>
+    </div>
+
+    <div class="footer-col">
+      <h4>Enlaces</h4>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="quienesSomos.html">Quiénes somos</a></li>
+        <li><a href="nuestraTienda.html">Tienda</a></li>
+        <li><a href="nuestrasSedes.html">Nuestras sedes</a></li>
+        <li><a href="registro.html">Regístrate</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Contacto</h4>
+      <ul>
+        <li>📍 Arequipa, Perú</li>
+        <li>📞 +51 953 721 561</li>
+        <li>✉️ contacto@fitkids.pe</li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    © 2025 FitKids · Bienestar físico infantil
+  </div>
 </footer>
 
 </body>
